fixed mobile spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ p{
 }
 
 .container-text{
-    padding-bottom: 15rem;
+    padding-bottom: 1rem;
 }
 
 .bg-navbar-transparency {
